--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/runtime": "^7.6.3",
     "@babel/runtime-corejs3": "^7.6.3",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26"
   },
@@ -30,8 +31,10 @@
     "@babel/preset-env": "^7.6.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-lodash": "^3.3.4",
     "eslint": "^6.5.1",
     "eslint-loader": "^3.0.2",
+    "lodash-webpack-plugin": "^0.11.5",
     "moment-locales-webpack-plugin": "^1.1.0",
     "moment-timezone-data-webpack-plugin": "^1.1.0",
     "terser-webpack-plugin": "^2.1.3",
