Make moment configurable from package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "config": {
     "devServer": {
       "port": 9000
+    },
+    "moment": {
+      "localesToKeep": "en",
+      "matchZones": "^America\\/",
+      "startYearOffset": -10,
+      "endYearOffset": 5
     }
   },
   "scripts": {
