--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "compression-webpack-plugin": "^3.0.0",
     "eslint": "^6.5.1",
-    "eslint-loader": "^3.0.2",
+    "eslint-webpack-plugin": "^2.2.1",
     "lodash-webpack-plugin": "^0.11.5",
     "moment-locales-webpack-plugin": "^1.1.0",
     "moment-timezone-data-webpack-plugin": "^1.1.0",
