--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
-    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
     "compression-webpack-plugin": "^6.1.0",
